...

            <Spinner
                android:id="@+id/usertypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/latlongSearchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_lat"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentTop="true"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_long"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentTop="true"
...
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_start_date"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentTop="true"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT START DATE"
                    android:id="@+id/btn_start_date"
                    android:layout_marginTop="6dp"
                    android:layout_alignBottom="@+id/in_start_date"
...
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_start_time"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/in_start_date"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT START TIME"
                    android:id="@+id/btn_start_time"
                    android:layout_below="@+id/btn_start_date"
                    android:layout_alignLeft="@+id/btn_start_date"
...
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_end_date"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentTop="true"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT END DATE"
                    android:id="@+id/btn_end_date"
                    android:layout_marginTop="6dp"
                    android:layout_alignBottom="@+id/in_end_date"
...
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_end_time"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/in_end_date"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SELECT END TIME"
                    android:id="@+id/btn_end_time"
                    android:layout_below="@+id/btn_end_date"
                    android:layout_alignLeft="@+id/btn_end_date"
...

            <Spinner
                android:id="@+id/distSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Search"
                android:id="@+id/btn_confirm"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
...
