<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground"
    tools:context=".ui.activities.PaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_login"
            android:paddingTop="56dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/payment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="proceed to checkout"
            android:background="@color/colorAccent"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="onBraintreeSubmit" />
    </LinearLayout>
</ScrollView>