...
    <string-array name="signup_usertype_spinner">
        <item>Renter</item>
        <item>Provider</item>
    </string-array>
    <string-array name="search_loctype_spinner">
        <item>Search by address</item>
        <item>Search by latitude, longitude</item>
    </string-array>
    <string-array name="search_dist_spinner">
        <item>Within 1 mi</item>
        <item>Within 2 mi</item>
        <item>Within 3 mi</item>
    </string-array>
    <string-array name="search_cartype_spinner">
        <item>Compact</item>
        <item>Covered parking</item>
        <item>Handicap</item>
        <item>SUV</item>
...
