...
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profilePic"
                android:layout_width="24dp"
                android:layout_height="52dp"
                android:layout_marginTop="2dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorLightBackground"
                app:civ_border_width="4dp"
...
