...
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liscenseIdText"
            android:hint="Enter license ID"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="next"
            android:id="@+id/nextButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp" />

...
